--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #050713;
 }
 
 .logo {
@@ -7,9 +8,15 @@
   pointer-events: none;
 }
 
+#cover {
+  width: 100%
+}
+
 .header {
   background-color: #050713;
   min-height: 30vh;
+  margin: 0px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
